<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingLeft="5dip"
	android:paddingRight="5dip"
	android:paddingBottom="5dip"
	>
	<TextView
		android:id="@+id/dialog_textsize_label01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dlg_textsize_label"
		android:textSize="18dip"
		android:textColor="#ffffffff"
		/>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
		>
		<SeekBar 
			android:id="@+id/dialog_textsize_seekbar01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:max="24"
			/>
		<TextView
			android:id="@+id/dialog_textsize_label02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text=""
			android:layout_gravity="center_vertical"
			android:paddingLeft="5dip"
			android:textSize="18dip"
			android:textColor="#ffffffff"
			/>
		<TextView
			android:id="@+id/dialog_textsize_label03"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:text="@string/dlg_textsize_dip"
			android:paddingLeft="3dip"
			android:layout_gravity="center_vertical"
			android:textSize="18dip"
			android:textColor="#ffffffff"
			/>
	</LinearLayout>
	<TextView
		android:id="@+id/dialog_textsize_label04"
		android:text="@string/dlg_textsize_sample"
		android:textSize="30dip"
		android:textColor="#ff000000"
		android:background="#ffffffff"
		android:layout_width="fill_parent"
		android:layout_height="75dip"
		/>
</LinearLayout>